2.0.2 (2022-04-05)
    - fixed double escaping of strings in generated JSON, which could cause
      issues during expansion and delivery
    - fixed DMARC alignment checks
    - added standard config flags to simdmarc
    - fixed crash during LDAP connection reset with no open LDAP connections
    - fixed fast file accounting for unpuntable messages

2.0.1 (2022-03-15)
    - reenabled TLS v1.0 and v1.1
    - fixed unique PIDs
    - fixed bug that would create multiple host queues for hostnames that
      differed only in case, then drop all but one on the floor
    - fixed SRS address checking during receive

2.0.0 (2022-03-11)
    - brand new UCL configuration system
    - added -U flag to specify arbitrary configuration on the command line
    - changed the on-disk format of E files to JSON
    - removed support for DNS-based autoconfiguration
    - added support for setting SASL options directly in the simta configuration
    - added support for statsd metric gathering
    - updated build system
    - updated LDAP code to use non-deprecated APIs
    - added most global delivery settings as per-domain settings
    - added associated domain support to alias expansion
    - removed compile-time procmail dependency
    - added support for DNS lists with multiple entry types
    - improved LDAP address comparison logic
    - improved CLI tool interface consistency
    - added support for multiple subaddress separators
    - improved handling of required "Postmaster" mailbox
    - fixed a "poison pill" bug, where a single consistently tempfailed message
      (e.g. due to a particular mailbox being throttled) would cause all of
      that domain's MXes to be marked as down. simta would then skip delivery of
      any remaining messages in that host queue.
    - corrected the error code returned for unsupported MAIL/RCPT extensions
    - separated delivery timeouts for the fast queue and other queues
    - removed support for reading E files from simta 0.10.0 or older