@@ -406,6 +406,9 @@ defaults {
             attributes {
                 mail = mail;
                 forwarding = mail;
+                autoreply = onvacation;
+                autoreply_start = umichAutoReplyStart;
+                autoreply_end = umichAutoReplyEnd;
                 request = [ * ];
             }
             bind {
@@ -497,10 +500,13 @@ domain "localhost.DEFAULT" {
 #               mail = mail
 #               forwarding = mailforwardingaddress;
 #               group_forwarding = mailforwardingaddress;
-#               vacation = onvacation;
+#               autoreply = onvacation;
+#               autoreply_start = umichAutoReplyStart;
+#               autoreply_end = umichAutoReplyEnd;
+#           }
 #
-#           vacation {
-#               host = vacation.example.com;
+#           autoreply {
+#               host = autoreply.example.com;
 #           }
 #       }
 #   }
