@@ -202,11 +202,12 @@ olcObjectClasses: {0}( 1.3.6.1.4.1.250.3.2 NAME 'rfc822MailGroup' DESC 'RFC8
  22 Mail Group' SUP top STRUCTURAL MUST ( objectclass $ owner $ cn ) MAY ( a
  ssociateddomain $ description $ errorsto $ facsimiletelephonenumber $ joina
  ble $ krbname $ labeleduri $ member $ Membersonly $ moderator $ multilinede
- scription $ notice $ permittedgroup $ postaladdress $ RealtimeBlockList $ r
- equeststo $ rfc822errorsto $ rfc822Mail $ rfc822Private $ rfc822requeststo 
- $ seealso $ streetAddress $ suppressnoemailerror $ telephonenumber $ umichA
- utoReplyStart $ umichAutoReplyEnd $ umichAutoReply $ umichPermittedSenders 
- $ umichPermittedSendersDomains $ umichReceiveDisallowedMessages ) )
+ scription $ notice $ onvacation $ permittedgroup $ postaladdress $ Realtime
+ BlockList $ requeststo $ rfc822errorsto $ rfc822Mail $ rfc822Private $ rfc8
+ 22requeststo $ seealso $ streetAddress $ suppressnoemailerror $ telephonenu
+ mber $ umichAutoReplyStart $ umichAutoReplyEnd $ umichAutoReply $ umichPerm
+ ittedSenders $ umichPermittedSendersDomains $ umichReceiveDisallowedMessage
+ s ) )
 olcObjectClasses: {1}( 1.3.6.1.4.1.250.3.1 NAME 'umichPerson' DESC 'Universi
  ty of Michigan person ObjectClass' SUP inetorgperson STRUCTURAL MUST ( obje
  ctclass $ sn $ cn $ entityid ) MAY ( audio $ businesscategory $ campus $ ca
