@@ -1,3 +1,6 @@
+2.x.x (2022-??-??)
+    - added support for autoreply date ranges
+
 2.0.2 (2022-04-05)
     - fixed double escaping of strings in generated JSON, which could cause
       issues during expansion and delivery
